# context-engine

./: .coveragerc  .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/issues/: 001-phase1-vision.md  002-phase2-audio.md  003-phase3-context.md  004-phase4-vapi.md  004-phase4-voice-integration.md  005-phase5-polish.md  006-phase6-migration.md  007-setup-initial-structure.md  README.md
docs/: PHASE1_COMPLETE.md  SETUP_COMPLETE.md  audio-capture-api.md  microphone-setup.md
examples/: advanced_context.py  basic_usage.py  test_vision.py
mcp-servers/: __init__.py  cli.py
mcp-servers/audio-capture/: __init__.py  __main__.py  server.py  transcription_service.py
mcp-servers/context-engine/: __init__.py
mcp-servers/vapi-integration/: __init__.py
mcp-servers/vision-capture/: README.md  __init__.py  capture.py  mcp.json  server.py
mcp-servers/working-memory/: __init__.py
shared/: __init__.py
shared/models/: __init__.py  audio_transcript.py  screen_capture.py
shared/storage/: __init__.py  database.py
shared/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/audio/: __init__.py  test_database.py  test_transcription_service.py
tests/context/: __init__.py
tests/integration/: test_audio_mcp.py  test_vision_mcp.py
tests/vision/: __init__.py  test_capture.py
